force-app/main/default/objects/TIP_Blocs__c/TIP_Blocs__c.object-meta.xml
<CustomObject>
    <label>TIP_Blocs</label>
    <nameField>
        <label>TIP_Blocs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TIP Blocs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>