force-app/main/default/objects/TIP_Blocs__c/fields/Formule_num__c.field-meta.xml
<CustomField>
    <fullName>Formule_num__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Formule num</label>
    <type>AutoNumber</type>
</CustomField>