force-app/main/default/objects/TIP_Blocs__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Method</label>
    <referenceTo>vlocity_ins__PaymentMethod__c</referenceTo>
    <relationshipLabel>TIP Blocs</relationshipLabel>
    <relationshipName>TIP_Blocs</relationshipName>
    <type>Lookup</type>
</CustomField>