force-app/main/default/objects/TIP_Blocs__c/fields/TIP_1__c.field-meta.xml
<CustomField>
    <fullName>TIP_1__c</fullName>
    <description>ensemple 1</description>
    <label>TIP_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>