force-app/main/default/objects/TIP_Blocs__c/fields/Tip_2__c.field-meta.xml
<CustomField>
    <fullName>Tip_2__c</fullName>
    <label>Tip_2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>