force-app/main/default/objects/TIP_Blocs__c/fields/Tip_3__c.field-meta.xml
<CustomField>
    <fullName>Tip_3__c</fullName>
    <defaultValue>$Label.TIP_3</defaultValue>
    <label>Tip_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>