force-app/main/default/objects/TIP_Blocs__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>vlocity_ins__AssetTransaction__c</referenceTo>
    <relationshipLabel>TIP Blocs</relationshipLabel>
    <relationshipName>TIP_Blocs</relationshipName>
    <type>Lookup</type>
</CustomField>